syntax = "proto3";

package pubService;


message Operacao {
    double operando1 = 1;
    double operando2 = 2;
    int32 operacao = 3;
}

message Resultado {
    double resultado = 1;
}

service Calculadora {
    rpc calcular(Operacao) returns (Resultado) {}
}